# raytracing-practices

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: color.hpp  data.hpp  geometry.hpp  parse.hpp  raytracing.hpp  scene.hpp
prac1/: CMakeLists.txt  build.sh  input.txt  output.ppm  run.sh
prac1/include/: data.hpp
prac1/src/: data.cpp  main.cpp  parce.cpp  point_operations.cpp  primitives.cpp  scene.cpp
src/: color.cpp  geometry.cpp  main.cpp  parce.cpp  point_operations.cpp  primitives.cpp  raytracing.cpp  scene.cpp
